MMM-SoccerLiveScore.css
:root {
  --vertical-animation-offset: 100%;
}
.MMM-SoccerLiveScore__api-info {
  font-size: 10px;
  text-align: right;
  font-style: italic;
  color: var(--color-text);
}

.MMM-SoccerLiveScore-outer-wrapper {
  overflow: hidden;
}

.MMM-SoccerLiveScore table {
  overflow: hidden;
}

.MMM-SoccerLiveScore__time {
  text-align: center;
  background-color: #6666660d;
}

.MMM-SoccerLiveScore__colon {
  width: 2px;
  text-align: center;
}

.MMM-SoccerLiveScore-team_logo {
  position: relative;
  top: 3px;
}

.MMM-SoccerLiveScore-team_logo--invert {
  filter: invert(1);
}

.MMM-SoccerLiveScore-team1_logo,
.MMM-SoccerLiveScore-team2_logo {
  position: relative;
  top: 2px;
  background-color: transparent;
}

.MMM-SoccerLiveScore-active {
  color: red;
  animation: MMMSoccerLiveScorePulsate 4s infinite alternate ease-in-out ;
}

.MMM-SoccerLiveScore-postponed {
  color: orange;
}

.MMM-SoccerLiveScore__is_playing {
  width: 10px;
  text-align: center;
  vertical-align: middle;
}

.MMM-SoccerLiveScore__is_playing__active-dot {
  margin: 0;
  padding: 0;
  width: 10px;
  height: 10px;
  background-color: red;
  border-radius: 100%;
  animation: MMMSoccerLiveScorePulsate 4s infinite alternate ease-in-out;
  animation-iteration-count: infinite;
  opacity: 0.1;
  display: inline-block;
}

.MMM-SoccerLiveScore-details,
.MMM-SoccerLiveScore-match_info {
  position: relative;
  height: 2ch;
}

.MMM-SoccerLiveScore-details i {
  margin: 0 0.5ch;
}

.MMM-SoccerLiveScore-details-red {
  background: red;
  width: 6px;
  height: 12px;
}

.MMM-SoccerLiveScore-details-yellow {
  background: yellow;
  width: 6px;
  height: 12px;
}

.MMM-SoccerLiveScore-horizontal-infinite-scroll {
  animation: MMMSoccerLiveScoreScrollLeft 00s infinite linear;
  transform: translate3d(0, 0, 0);
  backface-visibility: hidden;
  white-space: nowrap;
  text-align: left;
  padding-left: 100%;
  font-size: 80%;
  color: var(--color-text-dimmed);
  margin: 0;
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: -1;
}

.MMM-SoccerLiveScore-vertical-infinite-scroll .MMM-SoccerLiveScore-inner-wrapper {
  animation: MMMSoccerLiveScoreScrollTop 30s linear infinite alternate;
  transform: translate3d(0, 0, 0);
  backface-visibility: hidden;
  white-space: nowrap;
  overflow: hidden;
  z-index: 0;
  padding-top: 0%;
}

.MMM-SoccerLiveScore-vertical-infinite-scroll header {
  background: var(--color-background);
  position: relative;
  z-index: 100;
}

@keyframes MMMSoccerLiveScoreScrollLeft {
  to {
    transform: translateX(-100%);
  }
}

@keyframes MMMSoccerLiveScoreScrollTop {
  to {
    transform: translateY(var(--vertical-animation-offset, -100%));
  }
}

@keyframes MMMSoccerLiveScorePulsate {
  0% {
    opacity: 0.1;
  }
  20% {
    opacity: 0.5;
  }
  50% {
    opacity: 1;
  }
  80% {
    opacity: 0.5;
  }
  100% {
    opacity: 0.1;
  }
}

